Adds approximation functions for entropy and mutual information.

--- a/circle-radius-test.ipynb
+++ b/circle-radius-test.ipynb
@@ -10,13 +10,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mariosk/anaconda2/envs/ipykernel_py3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import scipy.spatial as ss\n",
+    "from scipy.special import digamma\n",
+    "from math import log\n",
     "\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout, BatchNormalization\n",
@@ -26,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,8 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -156,7 +172,7 @@
        "max         1.000000"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,50 +190,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def shannon_entropy(x, bins_per_dimension):\n",
-    "    probabilities = np.histogramdd(x, bins=bins_per_dimension)[0] / x.shape[0]\n",
-    "    return - np.sum(probabilities * np.log2(probabilities))"
+    "def entropy(x, k=3, base=2, seed=None):\n",
+    "    assert k < len(x)\n",
+    "    d, N = len(x[0]), len(x)\n",
+    "    \n",
+    "    if seed:\n",
+    "        np.random.seed(seed)\n",
+    "    intens = 1e-10\n",
+    "    small_noise_x = x + intens * np.random.rand(d)\n",
+    "    \n",
+    "    tree = ss.cKDTree(small_noise_x)\n",
+    "    nn = tree.query(small_noise_x, k + 1, p=float('inf'), n_jobs=-1)[0][:, -1:]\n",
+    "\n",
+    "    const = digamma(N) - digamma(k) + d * log(2)\n",
+    "    return (const + d * np.mean(np.log(nn))) / log(base)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalized_mutual_information(X, Y, bins_X, bins_Y, bins_X_Y):\n",
-    "    entropy_X = shannon_entropy(X, bins_X)\n",
-    "    entropy_Y = shannon_entropy(Y, bins_Y)\n",
+    "def avg_digamma(points, dvec):\n",
+    "    N = len(points)\n",
+    "    tree = ss.cKDTree(points)\n",
+    "    avg = 0.\n",
     "    \n",
-    "    X_Y = np.concatenate((X, Y.reshape(Y.shape[0], 1)), axis=1)\n",
-    "    entropy_X_Y = shannon_entropy(X_Y, bins_X_Y)\n",
-    "    \n",
-    "    mutual_information = entropy_X + entropy_Y - entropy_X_Y \n",
-    "    return mutual_information / (entropy_X + entropy_Y)"
+    "    for i in range(N):\n",
+    "        dist = dvec[i]\n",
+    "        num_points = len(tree.query_ball_point(points[i], dist - 1e-15, p=float('inf')))\n",
+    "        avg += digamma(num_points) / N\n",
+    "        \n",
+    "    return avg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mutual_information(x, y, k=3, base=2, seed=None):\n",
+    "    assert len(x) == len(y), \"Lists should have same length\"\n",
+    "    assert k <= len(x) - 1, \"Set k smaller than num. samples - 1\"\n",
+    "    \n",
+    "    if seed:\n",
+    "        np.random.seed(seed)\n",
+    "    intens = 1e-10\n",
+    "    x_noise = x + intens * np.random.rand(len(x[0]))\n",
+    "    y_noise = y + intens * np.random.rand(len(y[0]))\n",
+    "    points = np.concatenate([x_noise, y_noise], axis=1)\n",
+    "                   \n",
+    "    tree = ss.cKDTree(points)\n",
+    "    dvec = tree.query(points, k + 1, p=float('inf'), n_jobs=-1)[0][:, -1:]\n",
+    "       \n",
+    "    a, b, c, d = avg_digamma(x, dvec), avg_digamma(y, dvec), digamma(k), digamma(len(x))\n",
+    "    return (-a - b + c + d) / log(base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def discrete_entropy(x):\n",
+    "    probabilities = (pd\n",
+    "        .DataFrame(x, columns=['value'])\n",
+    "        .reset_index()\n",
+    "        .groupby('value')\n",
+    "        .count()) / x.shape[0]\n",
+    "    \n",
+    "    return - np.sum(probabilities * np.log2(probabilities))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def micd(x, y, k=3, base=2, warning=True):\n",
+    "    overallentropy = entropy(x, k, base)\n",
+    "\n",
+    "    n = len(y)\n",
+    "    word_dict = dict()\n",
+    "    for i in range(len(y)):\n",
+    "        if type(y[i]) == list:\n",
+    "            y[i] = tuple(y[i])\n",
+    "    for sample in y:\n",
+    "        word_dict[sample] = word_dict.get(sample, 0) + 1. / n\n",
+    "    yvals = list(set(word_dict.keys()))\n",
+    "\n",
+    "    mi = overallentropy\n",
+    "    for yval in yvals:\n",
+    "        xgiveny = [x[i] for i in range(n) if y[i] == yval]\n",
+    "        if k <= len(xgiveny) - 1:\n",
+    "            mi -= word_dict[yval] * entropy(xgiveny, k, base)\n",
+    "        else:\n",
+    "            if warning:\n",
+    "                print(\"Warning, after conditioning, on y=\", yval, \" insufficient data. Assuming maximal entropy in this case.\")\n",
+    "            mi -= word_dict[yval] * overallentropy\n",
+    "    return np.abs(mi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3.37 s, sys: 0 ns, total: 3.37 s\n",
+      "Wall time: 1.09 s\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.4603906737647134"
+       "0.752467773326595"
       ]
      },
-     "execution_count": 329,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "normalized_mutual_information(X_train, Y_train, 4, 2, 2)"
+    "%%time\n",
+    "micd(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 16.6 s, sys: 4 ms, total: 16.6 s\n",
+      "Wall time: 14.6 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9.733804132955148"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "mutual_information(X_train, 2*X_train, seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.88 s, sys: 16 ms, total: 1.9 s\n",
+      "Wall time: 568 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6.500807884108531"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "entropy(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8 ms, sys: 0 ns, total: 8 ms\n",
+      "Wall time: 9.94 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9999685778738825"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "discrete_entropy(Y_train)"
    ]
   },
   {
@@ -496,13 +693,7 @@
       "100000/100000 [==============================] - 1s 5us/step - loss: 0.0294 - acc: 0.9881 - val_loss: 0.0517 - val_acc: 0.9806\n",
       "Epoch 116/500\n",
       "100000/100000 [==============================] - 0s 5us/step - loss: 0.0287 - acc: 0.9883 - val_loss: 0.0498 - val_acc: 0.9798\n",
-      "Epoch 117/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 117/500\n",
       "100000/100000 [==============================] - 1s 5us/step - loss: 0.0286 - acc: 0.9883 - val_loss: 0.0496 - val_acc: 0.9787\n",
       "Epoch 118/500\n",
       "100000/100000 [==============================] - 0s 5us/step - loss: 0.0288 - acc: 0.9884 - val_loss: 0.0498 - val_acc: 0.9794\n",
@@ -740,13 +931,7 @@
       "100000/100000 [==============================] - 0s 5us/step - loss: 0.0234 - acc: 0.9904 - val_loss: 0.0448 - val_acc: 0.9830\n",
       "Epoch 232/500\n",
       "100000/100000 [==============================] - 0s 4us/step - loss: 0.0243 - acc: 0.9900 - val_loss: 0.0456 - val_acc: 0.9820\n",
-      "Epoch 233/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 233/500\n",
       "100000/100000 [==============================] - 0s 4us/step - loss: 0.0235 - acc: 0.9904 - val_loss: 0.0533 - val_acc: 0.9800\n",
       "Epoch 234/500\n",
       "100000/100000 [==============================] - 0s 4us/step - loss: 0.0234 - acc: 0.9904 - val_loss: 0.0422 - val_acc: 0.9831\n",
@@ -984,13 +1169,7 @@
       "100000/100000 [==============================] - 1s 6us/step - loss: 0.0203 - acc: 0.9915 - val_loss: 0.0436 - val_acc: 0.9821\n",
       "Epoch 348/500\n",
       "100000/100000 [==============================] - 0s 5us/step - loss: 0.0209 - acc: 0.9914 - val_loss: 0.0438 - val_acc: 0.9823\n",
-      "Epoch 349/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 349/500\n",
       "100000/100000 [==============================] - 0s 4us/step - loss: 0.0219 - acc: 0.9909 - val_loss: 0.0447 - val_acc: 0.9831\n",
       "Epoch 350/500\n",
       "100000/100000 [==============================] - 0s 4us/step - loss: 0.0199 - acc: 0.9920 - val_loss: 0.0524 - val_acc: 0.9797\n",
@@ -1228,13 +1407,7 @@
       "100000/100000 [==============================] - 0s 4us/step - loss: 0.0189 - acc: 0.9924 - val_loss: 0.0455 - val_acc: 0.9824\n",
       "Epoch 464/500\n",
       "100000/100000 [==============================] - 0s 4us/step - loss: 0.0201 - acc: 0.9917 - val_loss: 0.0442 - val_acc: 0.9830\n",
-      "Epoch 465/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 465/500\n",
       "100000/100000 [==============================] - 0s 4us/step - loss: 0.0219 - acc: 0.9909 - val_loss: 0.0495 - val_acc: 0.9809\n",
       "Epoch 466/500\n",
       "100000/100000 [==============================] - 0s 4us/step - loss: 0.0199 - acc: 0.9917 - val_loss: 0.0454 - val_acc: 0.9836\n",
