Finishes the entropy and mixed entropy functions.

--- a/circle-radius-test.ipynb
+++ b/circle-radius-test.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,15 +255,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def discrete_entropy(x):\n",
-    "    probabilities = (pd\n",
-    "        .DataFrame(x, columns=['value'])\n",
+    "    x_df = pd.DataFrame(x)\n",
+    "    probabilities = (x_df\n",
     "        .reset_index()\n",
-    "        .groupby('value')\n",
+    "        .groupby(list(x_df.columns))\n",
     "        .count()) / x.shape[0]\n",
     "    \n",
     "    return - np.sum(probabilities * np.log2(probabilities))[0]"
@@ -271,12 +271,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def micd(x, y, k=3, base=2, warning=True):\n",
-    "    overallentropy = entropy(x, k, base)\n",
+    "def mixed_mutual_information(x, y, k=3, base=2, seed=None):\n",
+    "    overallentropy = entropy(x, k, base, seed=seed)\n",
     "\n",
     "    n = len(y)\n",
     "    word_dict = dict()\n",
@@ -290,131 +290,8 @@
     "    mi = overallentropy\n",
     "    for yval in yvals:\n",
     "        xgiveny = [x[i] for i in range(n) if y[i] == yval]\n",
-    "        if k <= len(xgiveny) - 1:\n",
-    "            mi -= word_dict[yval] * entropy(xgiveny, k, base)\n",
-    "        else:\n",
-    "            if warning:\n",
-    "                print(\"Warning, after conditioning, on y=\", yval, \" insufficient data. Assuming maximal entropy in this case.\")\n",
-    "            mi -= word_dict[yval] * overallentropy\n",
+    "        mi -= word_dict[yval] * entropy(xgiveny, k, base, seed=seed)\n",
     "    return np.abs(mi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 3.37 s, sys: 0 ns, total: 3.37 s\n",
-      "Wall time: 1.09 s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.752467773326595"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "micd(X_train, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 16.6 s, sys: 4 ms, total: 16.6 s\n",
-      "Wall time: 14.6 s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "9.733804132955148"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "mutual_information(X_train, 2*X_train, seed=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.88 s, sys: 16 ms, total: 1.9 s\n",
-      "Wall time: 568 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "6.500807884108531"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "entropy(X_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 8 ms, sys: 0 ns, total: 8 ms\n",
-      "Wall time: 9.94 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.9999685778738825"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "discrete_entropy(Y_train)"
    ]
   },
   {
